Modernize and simplify a bit